# fastapi-mongo-to-elastic

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/infrastructure/adapters/persistence/: elasticsearch_adapter.py  mongodb_adapter.py
app/infrastructure/config/: database.py  setting.py
app/presentation/cli/: main.py
tests/infrastructure/adapters/: test_connections.py
