[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["dskim <wisedoseong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
elasticsearch = "^8.15.1"
motor = "^3.6.0"
pydantic-settings = "^2.6.1"
typer = "^0.13.0"
pytest = "^8.3.3"
aiohttp = "^3.10.10"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli-tool = "app.presentation.cli.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as an async test",
]